welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if( 13 <= p & p <= 19)
        ^countTeen:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	{
        ^