welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
var rep = 0

def test(p:Int):{
	if( 13 <= p & p <= 19)
	{
		rep = rep + 1;
	}
}

def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {

if( 13 <= a & a <= 19 )
{
	rep = rep + 1
}
if( 13 <= b & b <= 19 )
{
	rep = rep + 1
}
if( 13 <= c & c <= 19 )
{
	rep = rep + 1
}
if( 13 <= d & d <= 19 )
{
	rep = rep + 1
}
return rep
}
